--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/starter.css">
-    <title>Bootstrap npm starter</title>
+    <title>Using Bootstrap template</title>
   </head>
   <body>
     <div class="col-md-8 py-5 px-3 mx-auto">
@@ -18,7 +18,7 @@
         </h1>
       </header>
 
-      <h1>Get started with Bootstrap</h1>
+      <h1>Bootstrap template</h1>
       <div class="col-lg-8 px-0">
         <p class="lead">You've successfully loaded up the Bootstrap npm starter project! It's loaded up with <a href="https://getbootstrap.com/docs/4.6/getting-started/introduction/">Bootstrap 4</a>, <a href="https://icons.getbootstrap.com">Bootstrap Icons</a>, and tooling for compiling our Sass and JavaScript to your needs.</p>
         <p>If this button appears blue and the link appears purple, you've done it!</p>
@@ -50,22 +50,7 @@
       <hr class="my-5 w-25 mx-0">
 
       <div class="row">
-        <div class="col-md-6">
-          <h2>Adding Bootstrap Icons</h2>
-          <p><a href="https://icons.getbootstrap.com">Bootstrap Icons</a> are included with the SVG sprite here, but there are other <a href="https://icons.getbootstrap.com/#usage">usage options</a>, too. They're styleable with text utilities and more.</p>
-
-          <svg class="bi text-danger" width="32" height="32">
-            <use xlink:href="node_modules/bootstrap-icons/bootstrap-icons.svg#heart-fill"/>
-          </svg>
-          <svg class="bi text-dark" width="32" height="32">
-            <use xlink:href="node_modules/bootstrap-icons/bootstrap-icons.svg#toggles"/>
-          </svg>
-          <svg class="bi text-primary" width="32" height="32">
-            <use xlink:href="node_modules/bootstrap-icons/bootstrap-icons.svg#shop"/>
-          </svg>
-        </div>
-
-        <div class="col-md-6">
+        <div class="col">
           <h2>Guides</h2>
           <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
           <ul class="icon-list">
